--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,1 +1,14 @@
-<p>window works!</p>
+<div>
+  <div class="my-window" #myContainer>
+    <div>-01-</div>
+    <div>-02-</div>
+    <div>-03-</div>
+    <div>-04-</div>
+    <div>-05-</div>
+    <div>-06-</div>
+    <div>-07-</div>
+    <div>-08-</div>
+    <div>-09-</div>
+  </div>
+</div>
+
