Add container class.

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div class="my-window" #myContainer>
+<div class="my-window-container">
+  <div class="my-window" #myWindow>
     <div>-01-</div>
     <div>-02-</div>
     <div>-03-</div>
