--- a/src/app/window/window.component.scss
+++ b/src/app/window/window.component.scss
@@ -1,6 +1,21 @@
 .my-window-container {
-  height: 70px;
+  height: 200px;
   width: 100px;
   overflow-x: hidden;
   overflow-y: scroll;
+  box-sizing: border-box;
+}
+
+.my-window {
+  height: 70px !important;
+
+  &:first-of-type {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
