--- a/src/app/window/window.component.scss
+++ b/src/app/window/window.component.scss
@@ -6,8 +6,8 @@
   box-sizing: border-box;
 }
 
-.my-window {
-  height: 70px !important;
+.my-content {
+  height: 80px !important;
 
   &:first-of-type {
     display: inline-flex;
