Hook up on-center signal.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main>
-  <my-window/>
+  <button (click)="onClick()">center content</button>
+  <my-window [myCenter]="center()"/>
 </main>
 
 <router-outlet />
