--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,9 @@
 <br/>
 
 <main>
-  <button (click)="onClick()">center content</button>
+  <button (click)="onClick()">center</button>
+  <br/>
+  <br/>
   <my-window [myCenter]="center()"/>
 </main>
 
