Add some explanation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,6 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-
 <main>
+  <br/>
+  <p>Input signal from parent to child to trigger centering of content in child.</p>
   <button (click)="onClick()">center</button>
   <br/>
   <br/>
