Add some explanation.

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -14,5 +14,8 @@
       }
     </div>
   </div>
+  <br/>
+  <p>Trigger centering within child.</p>
+  <button (click)="onCenter()">center</button>
 </div>
 
