Use doCenter as signal.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <button (click)="onClick()">center</button>
   <br/>
   <br/>
-  <my-window [myCenter]="center()"/>
+  <my-window [doCenter]="center()"/>
 </main>
 
 <router-outlet />
