--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,10 +1,11 @@
 <div class="my-window-container">
   <div class="my-window" #myWindow>
     <div class="my-content">
-      @for (line of redContent(); track line.id) {
+      @for (line of content; track line.id) {
       <div>R {{line.id}}</div>
       }
     </div>
+    <!--
     <div class="my-gap">
       <div>=={{gapContent()}}==</div>
     </div>
@@ -13,6 +14,7 @@
         <div>B {{line.id}}</div>
       }
     </div>
+    -->
   </div>
   <br/>
   <p>Trigger centering within child.</p>
