Remove input signal.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
 <main>
-  <!--
-  <br/>
-  <p>Input signal from parent to child to trigger centering of content in child.</p>
-  <button (click)="onClick()">center</button>
-  <br/>
-  <br/>
-  -->
-  <my-window [doCenter]="center()"/>
+  <my-window/>
 </main>
-
-<router-outlet />
